[package]
name = 'pallet-balances'
version = '3.0.0'
authors = [
	'Parity Technologies <admin@parity.io>',
	'Totem Accounting <support@totemaccounting.com>',
]
description = 'Totem fork of a FRAME pallet to manage balances'
license = 'Apache-2.0'
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', default-features = false }
log = { version = '0.4.14', default-features = false }
max-encoded-len = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = "3.0.0", default-features = false, features = [ "derive" ] }

totem-common = { path = '../../common', default-features = false, features = ['mock'] }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4' }

totem-common = { path = '../../common', default-features = false, features = ['mock'] }

[features]
default = ['std']
std = [
	'codec/std',
	'sp-std/std',
	'sp-runtime/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'totem-common/std',
]
#runtime-benchmarks = ['frame-benchmarking']
try-runtime = ['frame-support/try-runtime']
