[package]
name = 'pallet-funding'
version = '1.0.0'
authors = ['Totem Accounting <support@totemaccounting.com>']
description = 'Totem Funding/Currency Pallet'
license = 'GNU'
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = '1', optional = true }
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false }
totem-common = { path = '../../common', default-features = false }
# primitives
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.5', default-features = false }
# frame
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.5', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.5', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.5', default-features = false }

[dev-dependencies]

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'totem-common/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-timestamp/std',
]
